Modify role in subject added, interaction with db not working

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,6 +46,9 @@
 
   <!-- Custom styles for admin template-->
   <link href="/static/css/sb-admin-2.css" rel="stylesheet">
+  
+  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
 
 
 </head>
