--- a/app/templates/manageSubject.html
+++ b/app/templates/manageSubject.html
@@ -296,7 +296,7 @@
 
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn  btn-primary">Create</button>
+              <button type="submit" class="btn  btn-primary">Update</button>
               </form>
             </div>
           </div>
