--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -160,10 +160,19 @@
                   {% if not user==(element[0].email.split('@'))[0] %}
                   <div class="row">
                     <div class="col-sm">
-                      <button type="button" class="btn btn-secondary float-right modify-user" data-toggle="modal" data-user-email="{{element[0].email}}" data-target="#modifyUserModal">
-                        Modify Role
-                      </button>
+                      <a data-toggle="modal" data-id="{{element[0].email}}" class="modifyPrivilegeModal btn btn-secondary float-right" href="#modifyPrivilegeModal">Modify Privilege</a>
                     </div>
+
+                    <script>
+                    $(document).ready(function () {
+                      $(document).on("click", ".modifyPrivilegeModal", function () {
+                           var userEmail = $(this).data('id');
+                           $(".modal-body #email").val( userEmail );
+                      });
+                    });
+
+                    </script>
+
                     <div class="col-sm">
                       <form action="/deleteUser" method="POST">
                           <input type="hidden" name="user_id" value={{element[0].id}} >
@@ -179,6 +188,48 @@
         </table>
 
       </div>
+
+      <!-- modify User Modal -->
+      <div class="modal fade" id="modifyPrivilegeModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title" id="uploadUsersCSVTitle">Modify Role</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+
+            <div class="modal-body">
+              <h6> Introduce new role </h6>
+            <form action="/changePrivilege" method="post" id="upload-form" >
+              <div class="row pt-2 pb-2">
+                <div class="col">
+                  <label> New Role </label>
+                  <select class="custom-select" name="privilege" id="privilege">
+                    {% for privilege in privileges%}
+                    <option value={{privilege.name}}>{{privilege.name}}</option>
+                    {% endfor %}
+                  </select>
+                  <input type="hidden" name="email" id="email" value=""/>
+
+                </div>
+
+              </div>
+
+              </div>
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn  btn-primary">Update</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- end modal modify User Subject-->
 
     </div>
     <!-- /.container-fluid -->
