Visuals improved. Color changed

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,7 +46,7 @@
 
   <!-- Custom styles for admin template-->
   <link href="/static/css/sb-admin-2.css" rel="stylesheet">
-  
+
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 
 
@@ -58,7 +58,7 @@
   <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
       <div class="container">
-        <a class="navbar-brand" href="">LabTon</a>
+        <a class="navbar-brand text-white">LabTon</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
