Hability of defining degrees from appconfig, changing some permissions in the web(change role, delete subject only availables for role admin)

--- a/app/templates/allSubjects.html
+++ b/app/templates/allSubjects.html
@@ -81,7 +81,7 @@
               <div class="card">
                 <a href="subject/{{element.id}}" class="btn btn-primary" >
                     <span class="icon text-white-50">
-                      <i class="pr-2 fas fa-clipboard"></i>
+                      <i class="pr-2 fas fa-university"></i>
                       <b class="icon text-white">{{element.acronym}} {{element.year}}-{{element.year+1}}</b>
                     </span>
                 </a>
