--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -168,24 +168,26 @@
           <div class="col-8">
           <h1 class="h3 mb-0 text-gray-800">Home</h1>
           </div>
-          <div class="col">
+          <div class="col-2 ">
 
             {% for privilege in privileges%}
               {% if privilege.name=='professor' or privilege.name== 'admin'%}
                 <!-- Button trigger modal -->
 
-                <button type="button" class="btn btn-secondary float-right" data-toggle="modal" data-target="#createSubject">
+                <button type="button" class="btn btn-secondary w-100" data-toggle="modal" data-target="#createSubject">
                   Create subject
                 </button>
 
               {% endif %}
             {% endfor %}
           </div>
-            <a href="/allSubjects" class="btn btn-light float-right" >
+          <div class="col-2">
+            <a href="/allSubjects" class="btn btn-light w-100" >
                 <span class="icon">
                   See all subjects
                 </span>
             </a>
+          </div>
 
           </div>
 
