DB Migrations issue fixed, minor fixes implemented

--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -86,7 +86,7 @@
 
       <div class="col-2">
       <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button class="btn btn-secondary dropdown-toggle shadow animated--grow-in w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-cog mr-2"></i>
           Settings
         </button>
