--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -80,7 +80,7 @@
         </div>
         <div class="col-2">
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle shadow animated--grow-in w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fas fa-cog mr-2"></i>
             Settings
           </button>
