--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -169,16 +169,16 @@
           </div>
           <div class="col-2 ">
 
-            {% for privilege in privileges%}
-              {% if privilege.name=='professor' or privilege.name== 'admin'%}
-                <!-- Button trigger modal -->
 
-                <button type="button" class="btn btn-secondary w-100" data-toggle="modal" data-target="#createSubject">
-                  Create subject
-                </button>
+            {% if privilege=='professor' or privilege== 'admin'%}
+              <!-- Button trigger modal -->
 
-              {% endif %}
-            {% endfor %}
+              <button type="button" class="btn btn-secondary w-100" data-toggle="modal" data-target="#createSubject">
+                Create subject
+              </button>
+
+            {% endif %}
+        
           </div>
           <div class="col-2">
             <a href="/allSubjects" class="btn btn-light w-100" >
