--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -276,18 +276,17 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="uploadUsersCSVTitle">Modify Role</h4>
+              <h4 class="modal-title" id="uploadUsersCSVTitle">Modify Privilege</h4>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
               </button>
             </div>
 
             <div class="modal-body">
-              <h6> Introduce new role </h6>
+              <h6> Introduce new privilege </h6>
             <form action="/changePrivilege" method="post" id="upload-form" >
               <div class="row pt-2 pb-2">
                 <div class="col">
-                  <label> New Role </label>
                   <select class="custom-select" name="privilege" id="privilege">
                     {% for privilege in privileges%}
                     <option value={{privilege.name}}>{{privilege.name}}</option>
