--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <h1 class="masthead-heading mb-0">Welcome to LabTon</h1>
         <h2 class="masthead-subheading mb-0">Learn and have fun!</h2>
-        <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
+        <a href="#learn-more" class="btn btn-primary btn-xl rounded-pill mt-5">Learn More</a>
       </div>
     </div>
     <div class="bg-circle-1 bg-circle"></div>
@@ -30,7 +30,7 @@
 
 
   <section>
-    <div class="container">
+    <div class="container" id="learn-more">
       <div class="row align-items-center">
         <div class="col-lg-6 order-lg-2">
           <div class="p-5">
