--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -168,7 +168,7 @@
         </div>
         {% if role=="professor" or role=="admin"%}
         <div class="col-2">
-          <button type="button" class="btn btn-primary w-100" data-toggle="modal" data-target="#createPractice">
+          <button type="button" class="btn btn-primary shadow animated--grow-in w-100" data-toggle="modal" data-target="#createPractice">
             Create session
           </button>
         </div>
