--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -170,7 +170,7 @@
         </div>
         {% if role=='professor' or role=='admin'%}
       <div class="col-2">
-        <button type="button" class="btn btn-primary w-100" data-toggle="modal" data-target="#createPractice">
+        <button type="button" class="btn btn-primary w-100 shadow animated--grow-in" data-toggle="modal" data-target="#createPractice">
           Create practice
         </button>
       </div>
@@ -278,6 +278,11 @@
       </div>
       {% endif %}
 
+      </div>
+      <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <div class="col">
+          <h6 class="w-wrap">{{subject.description}}</h6>
+        </div>
       </div>
 
       <div class="row">
