--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -177,7 +177,7 @@
                 Create subject
               </button>
 
-              <!-- Subject Modal -->
+              <!-- create Subject Modal -->
               <div class="modal fade" id="createSubject" tabindex="-1" role="dialog" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                   <div class="modal-content">
