--- a/app/templates/practice.html
+++ b/app/templates/practice.html
@@ -163,7 +163,6 @@
       <!-- Page Heading -->
       <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <div class="col">
-
           <h1 class="h3 mb-0 text-gray-800">{{practice.name}}</h1>
         </div>
         {% if role=="professor" or role=="admin"%}
@@ -174,25 +173,40 @@
               <i class="fas fa-plus mr-2"></i>
               Create
             </button>
+
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              {% if role=="admin"%}
               <button type="button" class="dropdown-item" data-toggle="modal" data-target="#createMilestone">
                 <i class="fas fa-map-marker mr-2"></i>
                 Create milestone
-
-
               </button>
               <button type="button" class="dropdown-item" data-toggle="modal" data-target="#createSession">
                 <i class="fas fa-clipboard-list mr-2"></i>
                 Create session
-
-
               </button>
 
-              {% endif %}
             </div>
           </div>
+        </div>
 
+
+        <div class="col-2">
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle shadow animated--grow-in w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-cog mr-2"></i>
+            Settings
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            {% if role=="admin"%}
+            <button type="button" class="dropdown-item" data-toggle="modal" data-target="#updatePracticeModal">
+              <i class="fas fa-redo-alt mr-2"></i>
+              Update Practice
+            </button>
+            <button type="button" class="dropdown-item" data-toggle="modal" data-target="#deletePractice">
+              <i class="fas fa-trash mr-2"></i>
+              Delete Practice
+            </button>
+            {% endif %}
+          </div>
         </div>
 
         <!-- Milestone Modal -->
@@ -247,24 +261,6 @@
           </div>
         </div>
         <!-- end modal Milestone -->
-
-        <div class="col-2">
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle shadow animated--grow-in w-100" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-cog mr-2"></i>
-            Settings
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            {% if role=="admin"%}
-            <button type="button" class="dropdown-item" data-toggle="modal" data-target="#deletePractice">
-              Delete Practice
-              <i class="fas fa-trash ml-2"></i>
-            </button>
-            {% endif %}
-          </div>
-        </div>
-
-
           <!-- Delete Practice Modal-->
           <div class="modal fade" id="deletePractice" tabindex="-1" role="dialog"  aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -286,6 +282,67 @@
           <!-- End Delete Practice Modal -->
 
 
+          <!-- update Practice Modal -->
+          <div class="modal fade" id="updatePracticeModal" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h4 class="modal-title" id="uploadUsersCSVTitle">Update Practice</h4>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+
+                <div class="modal-body">
+                  <h6> Introduce new data </h6>
+                <form action="/updatePractice" method="post" id="upload-form" enctype="multipart/form-data">
+                  <div class="row pt-2 pb-2">
+                    <div class="col">
+                        <label> Name </label>
+                        <p>{{practice.name}}</p>
+
+                          <input class= "form-control" name="name" placeholder="Name" value={{practice.name}}>
+                    </div>
+                  </div>
+                  <div class="row pt-2 pb-2">
+                    <div class="col">
+                        <label> Milestones </label>
+                        <input class= "form-control" name="milestones" type="number" min="0" step="1" value={{practice.milestones}}>
+                    </div>
+                  </div>
+
+                  <div class="row pt-2 pb-2">
+                    <div class="col">
+                        <label> Rating way </label>
+                        <select class="custom-select" name="rating_way" id="rating_way" value={{practice.rating_way}}>
+                          {% for type in rating_ways%}
+                          <option value={{type}}>{{type}}</option>
+                          {% endfor%}
+                        </select>
+                    </div>
+                  </div>
+
+                    <div class="row pt-2 pb-2">
+                      <div class="col">
+                          <label> Description <i>(Optional)</i> </label>
+                            <input class= "form-control" name="description" placeholder="Description" value={{practice.description}}>
+                      </div>
+                    </div>
+                    <input type="hidden" name="practice_id" value={{practice.id}}>
+                    <input type="hidden" name="subject_id" value={{practice.subject_id}}>
+                  </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                  <button type="submit" class="btn btn-primary">Update</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end create modal Practice-->
+
+
         </div>
         {% endif %}
 
@@ -298,9 +355,9 @@
         </div>
       </div>
 
-      <h4> Milestones </h4>
-      <div class="row">
+      <h4 class="pb-2"> Milestones </h4>
 
+      <div class="row">
 
         {% for element in milestones%}
           <div class="col-xl-3 col-sm-6 mb-5">
