--- a/app/templates/subject.html
+++ b/app/templates/subject.html
@@ -190,11 +190,15 @@
               </span>
           </a>
           {% if role=='admin'%}
+          <button type="button" class="dropdown-item" data-toggle="modal" data-target="#updateSubjectModal">
+            <i class="fas fa-redo-alt mr-2"></i>
+            Update Subject
+          </button>
           <button type="button" class="dropdown-item" data-toggle="modal" data-target="#deleteSubjectModal">
             <i class="fas fa-trash mr-2"></i>
             Delete Subject
+          </button>
         {% endif%}
-      </button>
     </div>
   </div>
 
@@ -218,7 +222,7 @@
           </div>
         </div>
         <!-- End Delete Subject Modal -->
-        <!-- Practice Modal -->
+        <!-- create Practice Modal -->
         <div class="modal fade" id="createPractice" tabindex="-1" role="dialog" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -273,7 +277,85 @@
             </div>
           </div>
         </div>
-        <!-- end modal Practice-->
+        <!-- end create modal Practice-->
+        <!-- update Subject Modal -->
+        <div class="modal fade" id="updateSubjectModal" tabindex="-1" role="dialog" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Update Subject</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+
+              <div class="modal-body">
+                <h6> Introduce new data </h6>
+              <form action="/updateSubject" method="post" id="upload-form" enctype="multipart/form-data">
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Acronym </label>
+                        <input class= "form-control" name="acronym" placeholder="Acronym" value={{subject.acronym}}>
+                  </div>
+                </div>
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Name </label>
+                        <input class= "form-control" name="name" placeholder="Name" value={{subject.name}}>
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                      <label> Degree </label>
+                      <select class="custom-select" name="degree" id="degree" value={{subject.degree}}>
+                        {% for degree in degrees%}
+                        <option value={{degree}}>{{degree}}</option>
+                        {% endfor%}
+                      </select>
+                  </div>
+                </div>
+
+                <div class="row pt-2 pb-2">
+                  <div class="col">
+                    <label> Academic Year </label>
+                    <select class="custom-select" name="year" id="year" value={{subject.year}}>
+                    </select>
+
+                    <script>
+                        var currentYear = new Date().getFullYear()
+
+                        min = currentYear - 5
+                        var options = "";
+
+                        for (var year = currentYear +1 ; year >= min; year--) {
+                            nextYear=year+1
+                            options += "<option value='"+year+"'>" + year+" - "+ nextYear + "</option>";
+                        }
+                        document.getElementById("year").innerHTML = options;
+                    </script>
+
+                  </div>
+                  </div>
+                  <div class="row pt-2 pb-2">
+                    <div class="col">
+                        <label> Description <i>(Optional)</i> </label>
+                          <input class= "form-control" name="description" placeholder="Description" maxlength="1000" value={{subject.description}} >
+                    </div>
+                  </div>
+                  <input type="hidden" name="id" value={{subject.id}}>
+
+                </div>
+
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn  btn-primary">Update</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end modal update Subject -->
 
       </div>
       {% endif %}
@@ -285,8 +367,8 @@
         </div>
       </div>
 
+      <h4 class="pb-2"> Practices </h4>
       <div class="row">
-
         {% for element in practices%}
           <div class="col-xl-3 col-sm-6 mb-5">
             <div class="card">
